Added CarOwnerHistory table, corresponding repository, service and API endpoint