@@ -1,11 +1,10 @@
 package com.example.carins.service;
 
 import com.example.carins.model.Car;
+import com.example.carins.model.CarOwnerHistory;
 import com.example.carins.model.InsuranceClaim;
 import com.example.carins.model.InsurancePolicy;
-import com.example.carins.repo.CarRepository;
-import com.example.carins.repo.InsuranceClaimRepository;
-import com.example.carins.repo.InsurancePolicyRepository;
+import com.example.carins.repo.*;
 import org.springframework.data.crossstore.ChangeSetPersister;
 import org.springframework.stereotype.Service;
 
@@ -14,35 +13,35 @@ import java.util.ArrayList;
 import java.util.List;
 
 @Service
-public class CarService
-{
+public class CarService {
 
     private final CarRepository carRepository;
     private final InsurancePolicyRepository policyRepository;
     private final InsuranceClaimRepository claimRepository;
+    private final CarOwnerHistoryRepository carOwnerHistoryRepository;
+    private final OwnerRepository ownerRepository;
 
     public CarService(CarRepository carRepository, InsurancePolicyRepository policyRepository,
-                      InsuranceClaimRepository claimRepository)
-    {
+                      InsuranceClaimRepository claimRepository, CarOwnerHistoryRepository carOwnerHistoryRepository,
+                      OwnerRepository ownerRepository) {
         this.carRepository = carRepository;
         this.policyRepository = policyRepository;
         this.claimRepository = claimRepository;
+        this.carOwnerHistoryRepository = carOwnerHistoryRepository;
+        this.ownerRepository = ownerRepository;
     }
 
-    public List<Car> listCars()
-    {
+    public List<Car> listCars() {
         return carRepository.findAll();
     }
 
-    public boolean isInsuranceValid(Long carId, LocalDate date) throws ChangeSetPersister.NotFoundException
-    {
+    public boolean isInsuranceValid(Long carId, LocalDate date) throws ChangeSetPersister.NotFoundException {
         if (carId == null || date == null) return false;
         carRepository.findById(carId).orElseThrow(ChangeSetPersister.NotFoundException::new);
         return policyRepository.existsActiveOnDate(carId, date);
     }
 
-    public long registerClaim(Long carId, LocalDate claimDate, String description, int amount)
-    {
+    public long registerClaim(Long carId, LocalDate claimDate, String description, int amount) {
         var car = carRepository.findById(carId).orElseThrow();
         var insuranceClaim = new InsuranceClaim();
         insuranceClaim.setCar(car);
@@ -55,16 +54,14 @@ public class CarService
         return insuranceClaim.getId();
     }
 
-    public List<String> carHistory(Long carId)
-    {
+    public List<String> carHistory(Long carId) {
         carRepository.findById(carId).orElseThrow();
         List<InsurancePolicy> policyList = policyRepository.carPolicyHistory(carId);
         List<InsuranceClaim> claimList = claimRepository.carClaimHistory(carId);
         var result = new ArrayList<String>();
         int claimIndex = 0;
 
-        for (int i = 0; i < policyList.size() - 1; i++)
-        {
+        for (int i = 0; i < policyList.size() - 1; i++) {
             InsurancePolicy policy = policyList.get(i);
 
             claimIndex = addClaimsToHistory(result, claimList, claimIndex, policy.getStartDate());
@@ -74,7 +71,7 @@ public class CarService
             result.add("Policy " + policy.getId() + " for car " + policy.getCar().getId() + " expired on "
                     + policy.getEndDate());
         }
-        InsurancePolicy policy = policyList.get(policyList.size() - 1);
+        InsurancePolicy policy = policyList.getLast();
 
         claimIndex = addClaimsToHistory(result, claimList, claimIndex, policy.getStartDate());
 
@@ -83,13 +80,11 @@ public class CarService
 
         claimIndex = addClaimsToHistory(result, claimList, claimIndex, policy.getEndDate());
 
-        if (policy.getEndDate().isBefore(LocalDate.now()))
-        {
+        if (policy.getEndDate().isBefore(LocalDate.now())) {
             result.add("Policy " + policy.getId() + " for car " + policy.getCar().getId() + " expired on "
                     + policy.getEndDate());
 
-            while (claimIndex < claimList.size())
-            {
+            while (claimIndex < claimList.size()) {
                 InsuranceClaim claim = claimList.get(claimIndex++);
                 result.add("Claim " + claim.getId() + " for car " + claim.getCar().getId() + " on "
                         + claim.getClaimDate() + " with amount " + claim.getAmount() + " and description: "
@@ -100,12 +95,35 @@ public class CarService
         return result;
     }
 
+    public long transferOwner(long carId, long ownerId) {
+        var car = carRepository.findById(carId).orElseThrow();
+        var newOwner = ownerRepository.findById(ownerId).orElseThrow();
+
+        car.setOwner(newOwner);
+        carRepository.save(car);
+
+        var carOwnerHistory = carOwnerHistoryRepository.findFirstByCarOrderByStartDateDesc(car);
+        if (carOwnerHistory.isPresent()) {
+            var oldRecord = carOwnerHistory.get();
+
+            oldRecord.setEndDate(LocalDate.now());
+            carOwnerHistoryRepository.save(oldRecord);
+        }
+
+        var newRecord = new CarOwnerHistory();
+        newRecord.setCar(car);
+        newRecord.setOwner(newOwner);
+        newRecord.setStartDate(LocalDate.now());
+        carOwnerHistoryRepository.save(newRecord);
+
+        return newRecord.getId();
+    }
+
+
     private int addClaimsToHistory(List<String> result, List<InsuranceClaim> claimList, int claimIndex,
-                                   LocalDate beforeDate)
-    {
+                                   LocalDate beforeDate) {
         while (claimIndex < claimList.size() &&
-                claimList.get(claimIndex).getClaimDate().isBefore(beforeDate))
-        {
+                claimList.get(claimIndex).getClaimDate().isBefore(beforeDate)) {
             InsuranceClaim claim = claimList.get(claimIndex++);
             result.add("Claim " + claim.getId() + " for car " + claim.getCar().getId() + " on "
                     + claim.getClaimDate() + " with amount " + claim.getAmount() + " and description: "
